# airflow-client-python

./: .asf.yaml  .gitignore  .pre-commit-config.yaml  .rat-excludes  CHANGELOG.md  INSTALL  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_python_client.py  tox.ini
airflow/: .gitlab-ci.yml  test-requirements.txt
airflow_client/: .gitlab-ci.yml  .openapi-generator-ignore  README.md  __init__.py  configuration.py  exceptions.py  rest.py  setup.cfg  setup.py  tox.ini
dev/: README_RELEASE_CLIENT.md  insert_readme_example.py  sign.sh  test_python_client.py
docs/: ActionCollection.md  ActionCollectionAllOf.md  ActionResource.md  ActionsInner.md  ActionsInner1.md  ActionsInner2.md  ActionsInner3.md  AppBuilderMenuItemResponse.md  AppBuilderViewResponse.md  AssetAliasCollectionResponse.md  AssetAliasResponse.md  AssetApi.md  AssetCollectionResponse.md  AssetEventCollectionResponse.md  AssetEventResponse.md  AssetResponse.md  AssetWatcherResponse.md  BackfillApi.md  BackfillCollectionResponse.md  BackfillPostBody.md  BackfillResponse.md  BaseInfoResponse.md  BasicDAGRun.md  BulkAction.md  BulkActionNotOnExistence.md  BulkActionOnExistence.md  BulkActionResponse.md  BulkBodyBulkTaskInstanceBody.md  BulkBodyBulkTaskInstanceBodyActionsInner.md  BulkBodyConnectionBody.md  BulkBodyConnectionBodyActionsInner.md  BulkBodyPoolBody.md  BulkBodyPoolBodyActionsInner.md  BulkBodyVariableBody.md  BulkBodyVariableBodyActionsInner.md  BulkCreateActionBulkTaskInstanceBody.md  BulkCreateActionConnectionBody.md  BulkCreateActionPoolBody.md  (+265 more)
(+1211 files in other folders)
