# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[flake8]
max-line-length=99

[metadata]
name = apache-airflow-client
description = Apache Airflow API (Stable)
author = Apache Software Foundation
author_email = dev@airflow.apache.org
url = https://airflow.apache.org/
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
   LICENSE
   NOTICE
project_urls =
    Documentation=https://airflow.apache.org/docs/apache-airflow/stable/stable-rest-api-ref.html
    Bug Tracker=https://github.com/apache/airflow-client-python/issues
    Source Code=https://github.com/apache/airflow-client-python

[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.6
